featured background splash, certain elements hidden when in 1 column mode on mobile, icon sizes fixed

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -35,7 +35,7 @@ $text-box-p-margin: 16px;
     background-color: $color-bg-textbox;
     margin:20px;
     padding:25px;
-    border: 1px dashed gold;
+    border: 2px dashed gold;
     font-size:17px;
 }
 .text-box-multiparagraph-container {
